--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -10,3 +10,4 @@ hibernate.hbm2ddl.auto = create
 hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 default.user = jorge12387
 default.password = 123
+dir.upload.cache = d://gis/cache/
