--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,14 @@
             <version>5.1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
