--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
             <version>1.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>16.1</version>
+        </dependency>
 
 
     </dependencies>
