--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>gt-shapefile</artifactId>
             <version>16.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-geojson</artifactId>
+            <version>16.1</version>
+        </dependency>
+
 
 
     </dependencies>
