shape jason generator

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,12 +1,12 @@
 hibernate.dialect = org.hibernate.spatial.dialect.mysql.MySQLSpatial5InnoDBDialect
 jdbc.connection.driver_class = com.mysql.jdbc.Driver
-jdbc.connection.url = jdbc:mysql://localhost:3306/geomaster
+jdbc.connection.url = jdbc:mysql://localhost:3306/gis_test
 jdbc.connection.username =	root
 jdbc.connection.password =
 maximumPoolSize = 2
 hibernate.show_sql = true
 hibernate.generate_statistics = false
-hibernate.hbm2ddl.auto = create
+hibernate.hbm2ddl.auto = update
 hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 default.user = jorge12387
 default.password = 123
