--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>gt-geojson</artifactId>
             <version>16.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>16.1</version>
+        </dependency>
+
 
 
 
