--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -4,7 +4,7 @@ jdbc.connection.url = jdbc:mysql://localhost:3306/gis_test
 jdbc.connection.username =	root
 jdbc.connection.password =
 maximumPoolSize = 2
-hibernate.show_sql = true
+hibernate.show_sql = false
 hibernate.generate_statistics = false
 hibernate.hbm2ddl.auto = update
 hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
