--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,22 @@
             <version>16.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.geotools.xsd</groupId>
+            <artifactId>gt-xsd-core</artifactId>
+            <version>16.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools.xsd</groupId>
+            <artifactId>gt-xsd-sld</artifactId>
+            <version>16.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-render</artifactId>
+            <version>16.1</version>
+        </dependency>
+
 
 
 
