first test in server

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,8 +1,9 @@
 hibernate.dialect = org.hibernate.spatial.dialect.mysql.MySQLSpatial5InnoDBDialect
 jdbc.connection.driver_class = com.mysql.jdbc.Driver
-jdbc.connection.url = jdbc:mysql://localhost:3306/gis_test
+#jdbc.connection.url = jdbc:mysql://localhost:3306/gis_test
+jdbc.connection.url = jdbc:mysql://192.168.128.20/argus
 jdbc.connection.username =	root
-jdbc.connection.password =
+jdbc.connection.password = ingreso
 maximumPoolSize = 2
 hibernate.show_sql = false
 hibernate.generate_statistics = false
