--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -12,3 +12,4 @@ hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 default.user = jorge12387
 default.password = 123
 dir.upload.cache = d://gis/cache/
+#dir.upload.cache = /var/www/html/tmp/ms_tmp/cache/
